# MusicLabelValuation

./: .env.example  .gitignore  Dockerfile  README.md  check_graders.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_results.txt  test_ui.py  test_ui_results.txt
data/schema/: tracks_schema.md
data/seed_catalogs/easy_catalog_01/: catalog.json  ground_truth.json  monthly_revenue.csv  platform_mix.csv  territory_mix.csv  tracks.csv
data/seed_catalogs/hard_catalog_01/: catalog.json  ground_truth.json  monthly_revenue.csv  platform_mix.csv  territory_mix.csv  tracks.csv
data/seed_catalogs/medium_catalog_01/: catalog.json  ground_truth.json  monthly_revenue.csv  platform_mix.csv  territory_mix.csv  tracks.csv
music_catalog_pe_env/: __init__.py  client.py  data_loader.py  env.py  generators.py  graders.py  models.py  rewards.py  tasks.py  valuation.py
scripts/: smoke_test.sh
server/: app.py  shadcn-dark.css  ui.py
